[package]
name = "v-distributed-tunnel-v1"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.3"
dotenv = "0.15"
anyhow = "1"